--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munyangeyo Elie</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+
             <label class="log">Munyangeyo<span>Elie</span></label>
             <ul>
                 <li><a class="active" href="#" >Home</a></li>
@@ -22,7 +27,9 @@
         </nav>
 
 
+
     </header>
+    <section></section>
     <main>
 
 
