--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munyangeyo Elie</title>
     <link rel="stylesheet" href="styles.css"> 
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
+            <label class="checkbtn">
                 <i class="fas fa-bars"></i>
             </label>
 
@@ -29,11 +29,13 @@
 
 
     </header>
-    <section></section>
-    <main>
+    <section>
+        <main>
+            <img src="assets/francesco-ungaro-3OiK5d7LCX8-unsplash.jpg" alt="">
 
 
-    </main>
+        </main>
+    </section>
     <footer>
 
 
